--- a/src/gui/player/src/scss/styles.scss
+++ b/src/gui/player/src/scss/styles.scss
@@ -1,3 +1,5 @@
+@import '@fontsource/poppins/800.css';
+
 $body-color: #333;
 $body-bg: #fff;
 $border-radius: .4rem;
@@ -28,8 +30,16 @@ html {
     justify-content: center;
     text-align: center;
     color: white;
-    font-weight: bold;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    font-weight: 800;
+    // text-shadow: -3px -3px 0 #000, 3px -3px 0 #000, -3px 3px 0 #000, 3px 3px 0 #000;
+    -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow:
+        3px 3px 0 #000,
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -40,6 +50,7 @@ html {
     height: 100%;
     box-sizing: border-box;
     font-size: calc(2vw + 2vh + 2vmin);
+    font-family: 'Poppins', sans-serif;
 }
 
 .black-block {
