--- a/src/gui/rcontrol/src/scss/styles.scss
+++ b/src/gui/rcontrol/src/scss/styles.scss
@@ -3,3 +3,8 @@ $body-bg: #fff;
 $border-radius: .4rem;
 
 @import "bootstrap/scss/bootstrap";
+
+:root {
+    touch-action: pan-x pan-y;
+    height: 100%
+}
